Removing guava, apache.commons, and preparing to remove json libraries